# virtualLan

./: .gitignore  CMakeLists.txt  README.md  tuntap.txt
cmake/: asio.cmake  asyncpluscplus.cmake  boost.cmake  cocoyaxi.cmake  concurrentqueue.cmake  fmt.cmake  gflags.cmake  googletest.cmake  grpcpp.cmake  hiredis.cmake  hpsocket.cmake  kcp.cmake  libtuntap.cmake  onetbb.cmake  openvpn3.cmake  spdlog.cmake  stduuid.cmake  yasio.cmake
grpc/proto/: Address.proto  Device.proto  RegisterService.proto  RequestCode.proto  ResponseCode.proto  generate.bash
include/vl/: core.h
include/vl/client/: Client.h  TapDataHandler.h  test.hpp
include/vl/core/etnernet/: EtherData.h  Frame.h  staticDataPackage.h
include/vl/core/exception/: VlException.h  VlSocketException.h  exception.h
include/vl/core/log/: consoleLog.h  log.h
include/vl/core/network/: EtherData.h  EthernetV2Frame.h  Frame.h  Tap.h  address.h  staticDataPackage.h
include/vl/core/rpc/: Address.grpc.pb.h  Device.grpc.pb.h  Device.pb.h  RegisterService.grpc.pb.h  RegisterService.pb.h  RequestCode.grpc.pb.h  RequestCode.pb.h  ResponseCode.grpc.pb.h
include/vl/core/socket/: SocketServer.h  checkCode.h
include/vl/core/socket/udp/: UdpSocketServer.h
include/vl/core/thread/: ThreadPool.h
include/vl/core/util/: AutoReleaseMutex.h  RequestIdGenerator.h  Uncopyable.hpp  Uncopymovable.hpp  Unmovable.hpp  define.h  netByteOrder.h  strUtil.h  typeDefile.h
include/vl/server/: CMakeLists.txt  Server.h
include/vl/server/ethernet/: EtherData.h  EthernetAddressManager.h
include/vl/server/exception/: AddressAlreadyInUseException.h  AddressErrorFormatException.h  AddressPoolFullException.h  AllocAddressException.h
include/vl/server/service/: RegisterServiceImpl.h  TestServiceImpl.h
src/: CMakeLists.txt
src/client/: CMakeLists.txt  Client.cpp  TapDataHandler.cpp  main.cpp
src/core/: CMakeLists.txt  main.cpp
src/core/ethernet/: EthernetV2Frame.cpp  Frame.cpp  Tap.cpp  staticDataPackage.cpp
src/core/exception/: vlException.cpp  vlSocketException.cpp
src/core/log/: consoleLog.cpp  log.cpp
src/core/network/: EthernetV2Frame.cpp  Frame.cpp  Tap.cpp  staticDataPackage.cpp
src/core/rpc/: Address.grpc.pb.cc  Address.pb.cc  Address.pb.h  Device.grpc.pb.cc  Device.pb.cc  Device.pb.h  RegisterService.grpc.pb.cc  RegisterService.grpc.pb.h  RegisterService.pb.cc  RequestCode.grpc.pb.cc  RequestCode.pb.cc  ResponseCode.grpc.pb.cc  ResponseCode.pb.cc  ResponseCode.pb.h
src/core/socket/: SocketServer.cpp
src/core/socket/udp/: UdpSocketServer.cpp
src/core/thread/: ThreadPool.cpp
src/core/util/: AutoReleaseMetux.cpp  RequestIdGenerator.cpp  netByteOrder.cpp  strUtil.cpp
src/doc/: v2Type.txt
src/server/: CMakeLists.txt  Server.cpp  main.cpp
src/server/ethernet/: EtherData.cpp  EthernetAddressManager.cpp
src/server/exception/: AddressAlreadyInUseException.cpp  AddressErrorFormatException.cpp  AddressPoolFullException.cpp  AllocAddressException.cpp
src/server/service/: RegisterServiceImpl.cpp
src/test/: CMakeLists.txt
src/test/async++/: CMakeLists.txt  main.cpp
src/test/tap/: CMakeLists.txt  main.cpp
src/test/test1/: CMakeLists.txt  main.cpp
src/test/test2/: CMakeLists.txt  main.cpp  ping.grpc.pb.cc  ping.grpc.pb.h  ping.pb.cc  ping.pb.h
src/test/udp/: CMakeLists.txt  main.cpp
src/test/yasio/: CMakeLists.txt  main.cpp
